[package]
authors = ["daladim"]
categories = ["parsing"]
description = "Ical/Vcard parser for Rust"
documentation = "https://docs.rs/ical"
homepage = "https://github.com/daladim/ical-rs"
keywords = ["ical", "vcard", "parser"]
license-file = "./LICENSE"
name = "ical-daladim"
readme = "./README.md"
repository = "https://github.com/daladim/ical-rs"
version = "0.8.0"

[badges]

[badges.travis-ci]
branch = "master"
repository = "https://travis-ci.org/daladim/ical-rs"



[dependencies]
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive"], optional = true }


[features]
default = ["vcard", "ical"]
ical = ["property"]
line = []
property = ["line"]
vcard = ["property"]
serde-derive = ["serde"]

[lib]
doc = true
name = "ical"
path = "src/lib.rs"
test = true
